WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59648
<
rdar://problem/9315254
> ARIA role attribute implemented incorrectly; does not support token list with fallbacks
https://bugs.webkit.org/show_bug.cgi?id=59648
Summary
<rdar://problem/9315254> ARIA role attribute implemented incorrectly; does no...
chris fleizach
Reported
2011-04-27 16:15:31 PDT
ARIA role attribute implemented incorrectly; does not support token list with fallbacks From the spec section 7.1. Role Attribute "The first name literal of a non-abstract WAI-ARIA role in the list of tokens in the role attribute defines the role according to which the user agent MUST process the element."
http://www.w3.org/TR/wai-aria/complete#host_general_role
Attachments
patch
(4.07 KB, patch)
2011-04-27 16:16 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2011-04-27 16:16:44 PDT
Created
attachment 91370
[details]
patch
WebKit Commit Bot
Comment 2
2011-04-27 22:43:22 PDT
Comment on
attachment 91370
[details]
patch Clearing flags on attachment: 91370 Committed
r85157
: <
http://trac.webkit.org/changeset/85157
>
WebKit Commit Bot
Comment 3
2011-04-27 22:43:26 PDT
All reviewed patches have been landed. Closing bug.
chris fleizach
Comment 4
2011-04-28 08:56:36 PDT
Check in GTK expected results
http://trac.webkit.org/changeset/85187
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug