2011-04-27  Chris Fleizach  <cfleizach@apple.com>

Reviewed by Beth Dakin.

        <rdar://problem/9315254> ARIA role attribute implemented incorrectly; does not support token list with fallbacks
        https://bugs.webkit.org/show_bug.cgi?id=59648

        * accessibility/aria-fallback-roles.html: Added.
        * platform/mac/accessibility/aria-fallback-roles-expected.txt: Added.
2011-04-27  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin.

        <rdar://problem/9315254> ARIA role attribute implemented incorrectly; does not support token list with fallbacks
        https://bugs.webkit.org/show_bug.cgi?id=59648

        Test: accessibility/aria-fallback-roles.html

        * accessibility/AccessibilityObject.cpp:
        (WebCore::AccessibilityObject::ariaRoleToWebCoreRole):

Canonical link: https://commits.webkit.org/74873@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85157 268f45cc-cd09-0410-ab3c-d52691b4dbfc